[package]
name = "peano-engine"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
inventory = "0.3.20"
peano-derive = { path = "peano-derive" }
typeid = "1.0.3"
bincode = { version = "2.0.1", features = ["serde"] }
futures = "0.3.31"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["alloc", "derive", "rc", "std"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
ron = "0.10.1"

[workspace]
members = [
    "peano-derive",
]

[workspace.dependencies]